python/testData/inspections/PyUnresolvedReferencesInspection3K/FromImportComprehensionVariableLeak/a.py
from c import <error descr="Cannot find reference 'b' in 'c'">b</error>
from c import a
print(b)
print(a)
